--- a/ansible/fem.yml
+++ b/ansible/fem.yml
@@ -1,17 +1,47 @@
 - hosts: localhost
   become: true
+  pre_tasks:
+    - name: Update cache
+      apt:
+        update_cache: true
+      tags:
+      - node
+      - zsh
   tasks:
   - name: Install zsh
     apt: name=zsh
+    tags:
+    - zsh
   - name: Change shell
     shell: chsh -s 'which zsh'
+    tags:
+    - zsh
   - name: Install ohmyzsh
     shell: sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+    tags:
+    - zsh
   - name: Install the zsh plugin autosuggestions
     ansible.builtin.git:
       repo: 'https://github.com/zsh-users/zsh-autosuggestions.git'
       dest: "~/.oh-my-zsh/plugins/zsh-autosuggestions"
-  - name: Update zshrc
-    shell: sed -i 's/(git/(git zsh-autosuggestions' ~/.zshrc
+      tags:
+      - zsh
+  # - name: Update zshrc
+  #   shell: sed -i 's/(git/(git zsh-autosuggestions' ~/.zshrc
+  - name: Install node
+    apt: 
+      name: ['nodejs', 'npm']
+    tags:
+    - node
+  - name: Install n
+    npm: 
+      name: n
+      global: true
+    tags:
+    - node
+  - name: n 14
+    shell: n 14
+    tags:
+    - node
 
 
