build docker container with the help of ansible

--- a/ansible/fem.yml
+++ b/ansible/fem.yml
@@ -92,5 +92,29 @@
     shell: n 16
     tags:
     - node
+  - name: Install typescript 
+    npm: 
+      name: typescript
+      global: true
+    tags:
+    - node
+  - name: Install typescript-language-server
+    npm: 
+      name: typescript-language-server
+      global: true
+    tags:
+    - node
+  - name: Install diagonstic-langserver
+    npm: 
+      name: diagnostic-languageserver
+      global: true
+    tags:
+    - node
+  - name: Install npm neovim
+    npm: 
+      name: neovim
+      global: true
+    tags:
+    - node
 
 
